added different train/val/test for differnet hresholds

--- a/code/02-build/01-train-validation-test-split.ipynb
+++ b/code/02-build/01-train-validation-test-split.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "4  For Jack Collom\\n10 Things I do Every Day\\n\\np...  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "Index(['Unnamed: 0', 'Author', 'Title', 'Poetry Foundation ID', 'Content'], dtype='object')"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "4  For Jack Collom\\n10 Things I do Every Day\\n\\np...  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
        "(15652, 4)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,34 +333,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(39, 2)"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "count_by_authors = data\\\n",
-    "    .groupby('author', as_index = False)\\\n",
-    "    .agg({'content':'count'})\\\n",
-    "    .rename({'content':'author_poem_count'}, axis = 1)\\\n",
-    "    .loc[lambda x:x.author_poem_count >= 30,:]\\\n",
-    "    .loc[lambda x:x.author != \"Anonymous\",:]\n",
+    "def threshold_authors_by_count(data, count):\n",
     "\n",
-    "count_by_authors.shape"
+    "    count_by_authors = data\\\n",
+    "        .groupby('author', as_index = False)\\\n",
+    "        .agg({'content':'count'})\\\n",
+    "        .rename({'content':'author_poem_count'}, axis = 1)\\\n",
+    "        .loc[lambda x:x.author_poem_count >= count,:]\\\n",
+    "        .loc[lambda x:x.author != \"Anonymous\",:]\n",
+    "    \n",
+    "    thresholded_data = data\\\n",
+    "        .merge(count_by_authors, how = \"inner\", on = [\"author\"])\\\n",
+    "        .shuffle()\n",
+    "    \n",
+    "    thresholded_data['author_poem_index'] = thresholded_data\\\n",
+    "    .groupby('author', as_index = False)\\\n",
+    "    .cumcount()\n",
+    "\n",
+    "    thresholded_data['author_poem_pct'] = thresholded_data['author_poem_index']/thresholded_data['author_poem_count']\n",
+    "    \n",
+    "    return thresholded_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_threshold_30 = threshold_authors_by_count(data, 30)\n",
+    "data_threshold_40 = threshold_authors_by_count(data, 40)\n",
+    "data_threshold_50 = threshold_authors_by_count(data, 50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1576, 7)\n",
+      "(643, 7)\n",
+      "(341, 7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data_threshold_30.shape)\n",
+    "print(data_threshold_40.shape)\n",
+    "print(data_threshold_50.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -389,100 +422,95 @@
        "      <th>poetry_foundation_id</th>\n",
        "      <th>content</th>\n",
        "      <th>author_poem_count</th>\n",
+       "      <th>author_poem_index</th>\n",
+       "      <th>author_poem_pct</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Percy sshe Shelley</td>\n",
-       "      <td>from\\n  \\n  Queen Mab: Part VI</td>\n",
-       "      <td>45137</td>\n",
-       "      <td>(excerpt)\\n\"Throughout these infinite orbs of ...</td>\n",
-       "      <td>43</td>\n",
+       "      <td>W. S. Di Piero</td>\n",
+       "      <td>The One-Year-Old Lemon Tree</td>\n",
+       "      <td>46741</td>\n",
+       "      <td>Its small celestial reach stops\\nwhere the cou...</td>\n",
+       "      <td>34</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Thomas Hardy</td>\n",
-       "      <td>'According to the Mighty Working'</td>\n",
-       "      <td>57342</td>\n",
-       "      <td>I\\n\\nWhen moiling seems at cease\\nIn the vague...</td>\n",
+       "      <td>Henry Wadsworth Longfellow</td>\n",
+       "      <td>The Building of the Ship</td>\n",
+       "      <td>44626</td>\n",
+       "      <td>\"Build me straight, O worthy Master!\\nStanch a...</td>\n",
        "      <td>38</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Rae Armantrout</td>\n",
-       "      <td>Our Nature</td>\n",
-       "      <td>54881</td>\n",
-       "      <td>The very flatness\\nof portraits\\nmakes for nos...</td>\n",
-       "      <td>62</td>\n",
+       "      <td>W. S. Di Piero</td>\n",
+       "      <td>Walt, the Wounded</td>\n",
+       "      <td>46739</td>\n",
+       "      <td>The whole world was there, plucking their line...</td>\n",
+       "      <td>34</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.029412</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Walt Whitman</td>\n",
-       "      <td>For You O Democracy</td>\n",
-       "      <td>51567</td>\n",
-       "      <td>Come, I will make the continent indissoluble,\\...</td>\n",
-       "      <td>41</td>\n",
+       "      <td>Ben Jonson</td>\n",
+       "      <td>To Heaven</td>\n",
+       "      <td>44465</td>\n",
+       "      <td>Good and great God, can I not think of thee\\nB...</td>\n",
+       "      <td>34</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>William Butler Yeats</td>\n",
-       "      <td>The Magi</td>\n",
-       "      <td>12892</td>\n",
-       "      <td>Now as at all times I can see in the mind's ey...</td>\n",
-       "      <td>47</td>\n",
+       "      <td>Edmund Spenser</td>\n",
+       "      <td>An Hymn In Honour Of Beauty</td>\n",
+       "      <td>45214</td>\n",
+       "      <td>AH whither, Love, wilt thou now carry me?\\nWha...</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 author                              title  \\\n",
-       "0    Percy sshe Shelley     from\\n  \\n  Queen Mab: Part VI   \n",
-       "1          Thomas Hardy  'According to the Mighty Working'   \n",
-       "2        Rae Armantrout                         Our Nature   \n",
-       "3          Walt Whitman                For You O Democracy   \n",
-       "4  William Butler Yeats                           The Magi   \n",
+       "                       author                        title  \\\n",
+       "0              W. S. Di Piero  The One-Year-Old Lemon Tree   \n",
+       "1  Henry Wadsworth Longfellow     The Building of the Ship   \n",
+       "2              W. S. Di Piero            Walt, the Wounded   \n",
+       "3                  Ben Jonson                    To Heaven   \n",
+       "4              Edmund Spenser  An Hymn In Honour Of Beauty   \n",
        "\n",
        "   poetry_foundation_id                                            content  \\\n",
-       "0                 45137  (excerpt)\\n\"Throughout these infinite orbs of ...   \n",
-       "1                 57342  I\\n\\nWhen moiling seems at cease\\nIn the vague...   \n",
-       "2                 54881  The very flatness\\nof portraits\\nmakes for nos...   \n",
-       "3                 51567  Come, I will make the continent indissoluble,\\...   \n",
-       "4                 12892  Now as at all times I can see in the mind's ey...   \n",
+       "0                 46741  Its small celestial reach stops\\nwhere the cou...   \n",
+       "1                 44626  \"Build me straight, O worthy Master!\\nStanch a...   \n",
+       "2                 46739  The whole world was there, plucking their line...   \n",
+       "3                 44465  Good and great God, can I not think of thee\\nB...   \n",
+       "4                 45214  AH whither, Love, wilt thou now carry me?\\nWha...   \n",
        "\n",
-       "   author_poem_count  \n",
-       "0                 43  \n",
-       "1                 38  \n",
-       "2                 62  \n",
-       "3                 41  \n",
-       "4                 47  "
+       "   author_poem_count  author_poem_index  author_poem_pct  \n",
+       "0                 34                  0         0.000000  \n",
+       "1                 38                  0         0.000000  \n",
+       "2                 34                  1         0.029412  \n",
+       "3                 34                  0         0.000000  \n",
+       "4                 33                  0         0.000000  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "thresholded_data = data\\\n",
-    "    .merge(count_by_authors, how = \"inner\", on = [\"author\"])\\\n",
-    "    .shuffle()\n",
-    "\n",
-    "thresholded_data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "thresholded_data['author_poem_index'] = thresholded_data\\\n",
-    "    .groupby('author', as_index = False)\\\n",
-    "    .cumcount()\n",
-    "\n",
-    "thresholded_data['author_poem_pct'] = thresholded_data['author_poem_index']/thresholded_data['author_poem_count']"
+    "data_threshold_30.head()"
    ]
   },
   {
@@ -494,15 +522,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = thresholded_data.loc[lambda x:x.author_poem_pct <= 0.7]\n",
-    "val_data = thresholded_data.loc[lambda x:\n",
-    "                                (x.author_poem_pct > 0.7)&\n",
-    "                                (x.author_poem_pct <= 0.9)]\n",
-    "test_data = thresholded_data.loc[lambda x:x.author_poem_pct > 0.9]"
+    "def train_val_test_split(data, splits = [0.7, 0.2, 0.1]):\n",
+    "    if not np.isclose(sum([0.7,0.2,0.1]), 1):\n",
+    "        raise RuntimeError(\"Splits must sum to 1.\")\n",
+    "    train_pt = splits[0]\n",
+    "    val_pt = splits[0] + splits[1]\n",
+    "    \n",
+    "    train_data = data.loc[lambda x:x.author_poem_pct <= train_pt]\n",
+    "    val_data = data.loc[lambda x:\n",
+    "                                    (x.author_poem_pct > train_pt)&\n",
+    "                                    (x.author_poem_pct <= val_pt)]\n",
+    "    test_data = data.loc[lambda x:x.author_poem_pct > val_pt]\n",
+    "    \n",
+    "    train_data.name = 'train_data.csv'\n",
+    "    val_data.name = 'val_data.csv'\n",
+    "    test_data.name = 'test_data.csv'\n",
+    "    \n",
+    "    return train_data, val_data, test_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_30, val_30, test_30 = train_val_test_split(data_threshold_30)\n",
+    "train_40, val_40, test_40 = train_val_test_split(data_threshold_40)\n",
+    "train_50, val_50, test_50 = train_val_test_split(data_threshold_50)"
    ]
   },
   {
@@ -514,29 +583,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_datasets(df_dict, save_folder):\n",
-    "    for i in df_dict:\n",
+    "def save_datasets(dfs, save_folder):\n",
+    "    for df in dfs:\n",
     "        try:\n",
-    "            df_dict[i].to_csv(save_folder + \"/\" + i, index = False)\n",
+    "            df.to_csv(save_folder + \"/\" + df.name, index = False)\n",
     "        except FileNotFoundError:\n",
     "            os.mkdir(save_folder)\n",
-    "            df_dict[i].to_csv(save_folder + \"/\" + i, index = False)"
+    "            df.to_csv(save_folder + \"/\" + df.name, index = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_datasets({'train_data.csv':train_data,\n",
-    "              'val_data.csv':val_data,\n",
-    "              'test_data.csv':test_data}, \n",
-    "             save_folder = processed_root(\"02-train-validation-test-split\"))"
+    "save_datasets([train_30, val_30, test_30], \n",
+    "             save_folder = processed_root(\"02-train-validation-test-split/threshold-30\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_datasets([train_40, val_40, test_40], \n",
+    "             save_folder = processed_root(\"02-train-validation-test-split/threshold-40\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_datasets([train_50, val_50, test_50], \n",
+    "             save_folder = processed_root(\"02-train-validation-test-split/threshold-50\"))"
    ]
   }
  ],
