--- a/code/02-build/02-generate-bow.ipynb
+++ b/code/02-build/02-generate-bow.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -41,16 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "39"
+       "5"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -108,82 +108,82 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Percy sshe Shelley</td>\n",
-       "      <td>from\\n  \\n  Queen Mab: Part VI</td>\n",
-       "      <td>45137</td>\n",
-       "      <td>(excerpt)\\n\"Throughout these infinite orbs of ...</td>\n",
-       "      <td>43</td>\n",
+       "      <td>Kay Ryan</td>\n",
+       "      <td>Blandeur\\n \\n \\n  \\n   Launch Audio in a New W...</td>\n",
+       "      <td>43501</td>\n",
+       "      <td>If it please God,\\nlet less happen.\\nEven out ...</td>\n",
+       "      <td>40</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Thomas Hardy</td>\n",
-       "      <td>'According to the Mighty Working'</td>\n",
-       "      <td>57342</td>\n",
-       "      <td>I\\n\\nWhen moiling seems at cease\\nIn the vague...</td>\n",
-       "      <td>38</td>\n",
+       "      <td>William Shakespeare</td>\n",
+       "      <td>Sonnet 98: From you have I been absent in the ...</td>\n",
+       "      <td>50503</td>\n",
+       "      <td>From you have I been absent in the spring,\\nWh...</td>\n",
+       "      <td>85</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Rae Armantrout</td>\n",
-       "      <td>Our Nature</td>\n",
-       "      <td>54881</td>\n",
-       "      <td>The very flatness\\nof portraits\\nmakes for nos...</td>\n",
-       "      <td>62</td>\n",
+       "      <td>Yusef Komunyakaa</td>\n",
+       "      <td>A World of Daughters</td>\n",
+       "      <td>144600</td>\n",
+       "      <td>Say licked clean at birth. Say\\nweeping in the...</td>\n",
+       "      <td>43</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Walt Whitman</td>\n",
-       "      <td>For You O Democracy</td>\n",
-       "      <td>51567</td>\n",
-       "      <td>Come, I will make the continent indissoluble,\\...</td>\n",
-       "      <td>41</td>\n",
+       "      <td>Emily Dickinson</td>\n",
+       "      <td>Let me not thirst with this Hock at my Lip</td>\n",
+       "      <td>48748</td>\n",
+       "      <td>Let me not thirst with this Hock at my Lip,\\nN...</td>\n",
+       "      <td>57</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>William Butler Yeats</td>\n",
-       "      <td>The Magi</td>\n",
-       "      <td>12892</td>\n",
-       "      <td>Now as at all times I can see in the mind's ey...</td>\n",
-       "      <td>47</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>Emily Dickinson</td>\n",
+       "      <td>Some keep the Sabbath going to Church – (236)</td>\n",
+       "      <td>52138</td>\n",
+       "      <td>Some keep the Sabbath going to Church –\\nI kee...</td>\n",
+       "      <td>57</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.017544</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 author                              title  \\\n",
-       "0    Percy sshe Shelley     from\\n  \\n  Queen Mab: Part VI   \n",
-       "1          Thomas Hardy  'According to the Mighty Working'   \n",
-       "2        Rae Armantrout                         Our Nature   \n",
-       "3          Walt Whitman                For You O Democracy   \n",
-       "4  William Butler Yeats                           The Magi   \n",
+       "                author                                              title  \\\n",
+       "0             Kay Ryan  Blandeur\\n \\n \\n  \\n   Launch Audio in a New W...   \n",
+       "1  William Shakespeare  Sonnet 98: From you have I been absent in the ...   \n",
+       "2     Yusef Komunyakaa                               A World of Daughters   \n",
+       "3      Emily Dickinson         Let me not thirst with this Hock at my Lip   \n",
+       "4      Emily Dickinson      Some keep the Sabbath going to Church – (236)   \n",
        "\n",
        "   poetry_foundation_id                                            content  \\\n",
-       "0                 45137  (excerpt)\\n\"Throughout these infinite orbs of ...   \n",
-       "1                 57342  I\\n\\nWhen moiling seems at cease\\nIn the vague...   \n",
-       "2                 54881  The very flatness\\nof portraits\\nmakes for nos...   \n",
-       "3                 51567  Come, I will make the continent indissoluble,\\...   \n",
-       "4                 12892  Now as at all times I can see in the mind's ey...   \n",
+       "0                 43501  If it please God,\\nlet less happen.\\nEven out ...   \n",
+       "1                 50503  From you have I been absent in the spring,\\nWh...   \n",
+       "2                144600  Say licked clean at birth. Say\\nweeping in the...   \n",
+       "3                 48748  Let me not thirst with this Hock at my Lip,\\nN...   \n",
+       "4                 52138  Some keep the Sabbath going to Church –\\nI kee...   \n",
        "\n",
        "   author_poem_count  author_poem_index  author_poem_pct  \n",
-       "0                 43                  0              0.0  \n",
-       "1                 38                  0              0.0  \n",
-       "2                 62                  0              0.0  \n",
-       "3                 41                  0              0.0  \n",
-       "4                 47                  0              0.0  "
+       "0                 40                  0         0.000000  \n",
+       "1                 85                  0         0.000000  \n",
+       "2                 43                  0         0.000000  \n",
+       "3                 57                  0         0.000000  \n",
+       "4                 57                  1         0.017544  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,27 +256,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0       {graves,\\nAnd, not, pressing, sweeping, minute...\n",
-       "1       {quick-cued, night-time,\\nAnd, fear, of, vague...\n",
-       "2       {of, lip, our, flatness\\nof, be, recklessness,...\n",
-       "3       {love, indissoluble,\\nI, of, will, each, Democ...\n",
-       "4       {stiff,, eye,\\nIn, disappear, of, uncontrollab...\n",
-       "                              ...                        \n",
-       "1118    {its, of, though, perhaps, not, thou, be, depa...\n",
-       "1119    {floor,\\nAnd, not, bookshelves,\\nThe, heavines...\n",
-       "1120    {of, carpets, carved, shady, them—aye,\\nClocks...\n",
-       "1121    {they’re, secret, of, guarding, never, virtue,...\n",
-       "1122    {looking-glass, inhabit, fear, of, fresh, her\\...\n",
-       "Length: 1123, dtype: object"
+       "0      {features\\ntoward, Grand, land,\\nremand, heart...\n",
+       "1      {of, deep, birds,, vermilion, sweet, play., th...\n",
+       "2      {waters.\\nThe, of, not, way, where\\nthis, alwa...\n",
+       "3      {my, Hock, thirst, Lip,\\nNor, beg,, not, this,...\n",
+       "4      {Wings, noted, –\\n\\nSome, of, Church,\\nOur, ne...\n",
+       "                             ...                        \n",
+       "452    {of, espionage?, be, destiny., happened, bride...\n",
+       "453    {of, though, not, when, thou, stay,\\nAnd, hath...\n",
+       "454    {of, woman’s, born, them, upon, whom, what, di...\n",
+       "455    {of, that,, lovely, might, way, be, Dr., econo...\n",
+       "456    {killing, sacrilege,, of, that,, say'st, honor...\n",
+       "Length: 457, dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,16 +358,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bag Train: (1123, 4829)\n",
-      "Bag Val: (317, 4829)\n",
-      "Bag Test: (136, 4829)\n"
+      "Bag Train: (457, 1810)\n",
+      "Bag Val: (128, 1810)\n",
+      "Bag Test: (58, 1810)\n"
      ]
     }
    ],
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
