intermediate commit to pull

--- a/code/02-build/02-generate-bow.ipynb
+++ b/code/02-build/02-generate-bow.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,155 +41,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(train_data['author'].unique())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = pd.read_csv(processed_root(\"02-train-validation-test-split/train_data.csv\"))\n",
-    "val_data = pd.read_csv(processed_root(\"02-train-validation-test-split/val_data.csv\"))\n",
-    "test_data = pd.read_csv(processed_root(\"02-train-validation-test-split/test_data.csv\"))"
+    "threshold = 30\n",
+    "data_folder = processed_root(\"02-train-validation-test-split/threshold-\"+str(threshold)+\"/\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>author</th>\n",
-       "      <th>title</th>\n",
-       "      <th>poetry_foundation_id</th>\n",
-       "      <th>content</th>\n",
-       "      <th>author_poem_count</th>\n",
-       "      <th>author_poem_index</th>\n",
-       "      <th>author_poem_pct</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Kay Ryan</td>\n",
-       "      <td>Blandeur\\n \\n \\n  \\n   Launch Audio in a New W...</td>\n",
-       "      <td>43501</td>\n",
-       "      <td>If it please God,\\nlet less happen.\\nEven out ...</td>\n",
-       "      <td>40</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>William Shakespeare</td>\n",
-       "      <td>Sonnet 98: From you have I been absent in the ...</td>\n",
-       "      <td>50503</td>\n",
-       "      <td>From you have I been absent in the spring,\\nWh...</td>\n",
-       "      <td>85</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Yusef Komunyakaa</td>\n",
-       "      <td>A World of Daughters</td>\n",
-       "      <td>144600</td>\n",
-       "      <td>Say licked clean at birth. Say\\nweeping in the...</td>\n",
-       "      <td>43</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Emily Dickinson</td>\n",
-       "      <td>Let me not thirst with this Hock at my Lip</td>\n",
-       "      <td>48748</td>\n",
-       "      <td>Let me not thirst with this Hock at my Lip,\\nN...</td>\n",
-       "      <td>57</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Emily Dickinson</td>\n",
-       "      <td>Some keep the Sabbath going to Church – (236)</td>\n",
-       "      <td>52138</td>\n",
-       "      <td>Some keep the Sabbath going to Church –\\nI kee...</td>\n",
-       "      <td>57</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.017544</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                author                                              title  \\\n",
-       "0             Kay Ryan  Blandeur\\n \\n \\n  \\n   Launch Audio in a New W...   \n",
-       "1  William Shakespeare  Sonnet 98: From you have I been absent in the ...   \n",
-       "2     Yusef Komunyakaa                               A World of Daughters   \n",
-       "3      Emily Dickinson         Let me not thirst with this Hock at my Lip   \n",
-       "4      Emily Dickinson      Some keep the Sabbath going to Church – (236)   \n",
-       "\n",
-       "   poetry_foundation_id                                            content  \\\n",
-       "0                 43501  If it please God,\\nlet less happen.\\nEven out ...   \n",
-       "1                 50503  From you have I been absent in the spring,\\nWh...   \n",
-       "2                144600  Say licked clean at birth. Say\\nweeping in the...   \n",
-       "3                 48748  Let me not thirst with this Hock at my Lip,\\nN...   \n",
-       "4                 52138  Some keep the Sabbath going to Church –\\nI kee...   \n",
-       "\n",
-       "   author_poem_count  author_poem_index  author_poem_pct  \n",
-       "0                 40                  0         0.000000  \n",
-       "1                 85                  0         0.000000  \n",
-       "2                 43                  0         0.000000  \n",
-       "3                 57                  0         0.000000  \n",
-       "4                 57                  1         0.017544  "
+       "'../../data/processed/02-train-validation-test-split/threshold-30/'"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_data.head()"
+    "data_folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data = pd.read_csv(data_folder+\"train_data.csv\")\n",
+    "val_data = pd.read_csv(data_folder+\"val_data.csv\")\n",
+    "test_data = pd.read_csv(data_folder+\"test_data.csv\")"
    ]
   },
   {
