repusheed newly processed training, validation, test sets

--- a/code/02-build/01-initial-poem-processing.ipynb
+++ b/code/02-build/01-initial-poem-processing.ipynb
@@ -387,7 +387,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Threshold authors by count"
+    "## Add counts by author and ranking for data-split"
    ]
   },
   {
